# ydb-python-dbapi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/docker/: docker-compose.yml
.github/scripts/: increment_version.py  increment_version_test.py
.github/workflows/: lint.yml  python-publish.yml  tests.yml
examples/: basic_example.py
tests/: conftest.py  test_connection.py  test_connections.py  test_convert_parameters.py  test_cursor.py  test_cursors.py  test_cursors_unit.py
ydb_dbapi/: __init__.py  connection.py  connections.py  cursors.py  errors.py  utils.py
