[tool.poetry]
name = "ydb-dbapi"
version = "0.0.0"
description = ""
authors = ["Oleg Ovcharuk <vgvoleg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ydb = "^3.18.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.6.9"
mypy = "^1.11.2"
poethepoet = "0.28.0"
types-protobuf = "^5.28.0.20240924"
testcontainers = "^4.8.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
mypy = "mypy ydb_dbapi"
ruff-fix = "ruff check --fix"
ruff = "ruff check"
lint = ["mypy", "ruff"]
format-check = "ruff format --check"
format = "ruff format"
tests = "pytest"

[tool.ruff]
exclude = [".venv", ".git", "__pycache__", "build", "dist", "venv"]
line-length = 79
target-version = "py39"
src = ["ydb_dbapi", "tests"]

[tool.ruff.lint]
select = ["F", "E"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb native -v -r fxX -p no:warnings"

[[tool.mypy.overrides]]
module = "ydb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ydb_dbapi.errors"
ignore_errors = true
