[tool.poetry]
name = "ydb-dbapi"
version = "0.0.0"
description = ""
authors = ["Oleg Ovcharuk <vgvoleg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ydb = "^3.18.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.6.9"
mypy = "^1.11.2"
poethepoet = "0.28.0"
types-protobuf = "^5.28.0.20240924"
PyYAML = "~5.3.0"
pytest = "^7.0.0"
pytest-asyncio = "0.21.0"
pytest-docker-compose = "3.2.1"
docker-compose = "1.29.2"
docker = "5.0.0"
requests = "2.31.0"
urllib3 = "1.26.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
mypy = "mypy ydb_dbapi"
ruff-fix = "ruff check --fix"
ruff = "ruff check"
lint = ["mypy", "ruff"]
format-check = "ruff format --check"
format = "ruff format"

[tool.ruff]
exclude = [".venv", ".git", "__pycache__", "build", "dist", "venv"]
line-length = 79
target-version = "py39"
src = ["ydb_dbapi", "tests"]

[tool.ruff.lint]
select = ["F", "E"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = "ydb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ydb_dbapi.errors"
ignore_errors = true
