[tool.poetry]
name = "ydb-dbapi"
version = "0.0.1b5"  # AUTOVERSION
description = "YDB Python DBAPI which complies with PEP 249"
authors = ["Yandex LLC <ydb@yandex-team.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ydb = "^3.18.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.6.9"
mypy = "^1.11.2"
poethepoet = "0.28.0"
types-protobuf = "^5.28.0.20240924"
testcontainers = "^4.8.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
sqlalchemy = "^2.0.36"
greenlet = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
mypy = "mypy ydb_dbapi"
ruff-fix = "ruff check --fix"
ruff = "ruff check"
lint = ["mypy", "ruff"]
format-check = "ruff format --check"
format = "ruff format"
tests = "pytest"

[tool.ruff]
exclude = [".venv", ".git", ".github/scripts", "__pycache__", "build", "dist", "venv"]
line-length = 79
target-version = "py39"
src = ["ydb_dbapi", "tests"]

[tool.ruff.lint]
ignore = [
    "D", # Allow not to have docstring for each method
    "ANN101", # Allow not to specify `Self` type for `self` param
    "ANN102", # Allow not to specify `Class` type for `cls` param
    "ANN401", # Allow to use Any type
    "FIX002", # Allow to use TODO in code
    "TD001", # Allow to specify FIXME (still trigger FIX001)
    "TD002", # Allow not to specify author of todo
    "TD003", # Allow not to specify ticket of todo (it doesn't work)
    "PERF401", # Allow not to use list comprehension each time
    "FBT", # Allow boolean positional arguments
    "TCH002", # Allow not to use `if TYPE_CHECKING` for all imports, which don't used explicitly
    "TCH003", # Allow not to use `if TYPE_CHECKING` for std lib imports
    "ISC001", # Conflicts with formatter
    "COM812", # Conflicts with formatter,
    # Ignores below could be deleted
    "EM101", # Allow to use string literals in exceptions
    "TRY003", # Allow specifying long messages outside the exception class
    "SLF001", # Allow access private member,
    "PGH003", # Allow not to specify rule codes
    "PLR0913", # Allow to have many arguments in function definition
]
select = ["ALL"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S", "SLF", "ANN201", "ARG", "PLR2004", "PT012"]
"conftest.py" = ["S", "ARG001"]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb native -v -r fxX -p no:warnings"

[[tool.mypy.overrides]]
module = "ydb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ydb_dbapi.errors"
ignore_errors = true
